--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,13 @@ sphinx:
 formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
-#python:
-#  version: 3.5
-#  install:
+python:
+  version: 3.5
+  install:
+    - method: pip
+        path: .
+        extra_requirements:
+            - matplotlib
+      - method: setuptools
+   system_packages: true
 #    - requirements: docs/requirements.txt
